View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033407 | Open CASCADE | OCCT:Shape Healing | public | 2023-06-20 09:36 | 2023-07-31 13:20 |
Reporter | anv | Assigned To | anv | ||
Priority | normal | Severity | minor | ||
Status | new | Resolution | open | ||
Product Version | 7.7.1 | ||||
Target Version | 7.7.3 | ||||
Summary | 0033407: Shape Healing - Exception on fixshape call | ||||
Description | Calling fixshape on the attached shape causes an exception. | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
lineoffset.brep (80,852 bytes) |
|
Branch CR33407 has been created by anv. SHA-1: e1498ef5e274d72a2d3bedd17405cf58e678fa52 Detailed log of new commits: Author: anv Date: Tue Jun 20 07:39:41 2023 +0100 0033407: Shape Healing - Exception on fixshape call Added proper processing of singularities for a surface of revolution on a line. |
|
Branch CR33407_750 has been created by anv. SHA-1: a6120daa4384cc03ad7fe3959fd670a406470a1e Detailed log of new commits: Author: anv Date: Tue Jun 20 07:39:41 2023 +0100 0033407: Shape Healing - Exception on fixshape call Added proper processing of singularities for a surface of revolution on a line. |