0033407: Shape Healing - Exception on fixshape call

Added proper processing of singularities for a surface of revolution on a line.